--- a/deploy/container/Containerfile
+++ b/deploy/container/Containerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.16
 
-RUN apk update &&
-    apk add --upgrade ser2net
+RUN apk update \
+    && apk --upgrade ser2net
 
 CMD /usr/sbin/ser2net -d -u
