--- a/deploy/container/Containerfile
+++ b/deploy/container/Containerfile
@@ -1,6 +1,6 @@
 FROM debian:stable-slim
 
-RUN sudo apt-get update \
-    && sudo apt-get install ser2net
+RUN apt-get update \
+    && apt-get install ser2net
 
 CMD /usr/sbin/ser2net -d -u
