--- a/deploy/container/Containerfile
+++ b/deploy/container/Containerfile
@@ -1,5 +1,5 @@
 FROM ubuntu
 
-RUN apt-get update && apt-get install -Y ser2net
+RUN apt-get update && apt-get install -y ser2net
 
 CMD /usr/sbin/ser2net -d -u
