--- a/cicd/pipeline.yaml
+++ b/cicd/pipeline.yaml
@@ -57,13 +57,13 @@ steps:
 ---
 kind: pipeline
 type: docker
-name: upgrade
+name: deploy
 
 depends_on:
   - build
 
 steps:
-  - name: upgrade kubernetes manifest
+  - name: upgrade k8s manifest
     image: alpine:3
     network_mode: host
     environment:
@@ -73,7 +73,7 @@ steps:
         "s%/$${REGISTRY_NAME}/$${DRONE_REPO_NAME}:.*%/$${REGISTRY_NAME}/$${DRONE_REPO_NAME}:$${DRONE_BUILD_NUMBER}\"%1"
         ./deploy/k8s/manifest.yaml
 
-  - name: push kubernetes manifest
+  - name: push k8s manifest
     image: appleboy/drone-git-push
     settings:
       remote_name: "git@github.com:${DRONE_REPO}"
@@ -85,7 +85,7 @@ steps:
       ssh_key:
         from_secret: github_ssh_key
 
-  - name: deploy
+  - name: apply k8s manifest
     image: bitnami/kubectl
     volumes:
       - name: kubeconfig
