--- a/src/ser2net.yaml
+++ b/src/ser2net.yaml
@@ -1,6 +1,6 @@
 connection: &con01
   accepter: tcp,3001
   enable: on
-  connector: serialdev,/dev/ttyACM0,
-    115200n81,
-    nobreak,local
+  options:
+    mdns: false
+  connector: serialdev,/dev/ttyACM0, 115200n81, nobreak,local
