--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     volumes:
       - ./src/ser2net.yaml:/etc/ser2net/ser2net.yaml
     devices:
-      - /dev/ttyACM0
+      - /dev/serial/by-id/usb-0658_0200-if00
