--- a/src/ser2net.conf
+++ b/src/ser2net.conf
@@ -1,1 +1,1 @@
-3001:raw:0:/dev/ttyACM0:115200 8DATABITS NONE 1STOPBIT
+3001:raw:0:/dev/serial/by-id/usb-0658_0200-if00:9600 8DATABITS NONE 1STOPBIT
