--- a/src/ser2net.yaml
+++ b/src/ser2net.yaml
@@ -1,23 +1,12 @@
 %YAML 1.1
 ---
-
 define: &banner Connected to port \N(\d)\r\n
 
-default:
-  name: local
-  value: true
-  class: serialdev
-
-default:
-  name: mdns
-  value: false
-
-default:
-  name: mdns-sysattrs
-  value: false
-
-connection: &my-console
-  accepter: telnet(rfc2217),mux,certauth(),ssl,tcp,3001
-  connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,9600N81
+connection: &zwave
+  accepter: tcp,3001
+  connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,9600N81,local
   options:
+    kickolduser: true
+    max-connections: 2
+    mdns: false
     banner: *banner
