--- a/docker-compose_v2.yaml
+++ b/docker-compose_v2.yaml
@@ -6,5 +6,7 @@ services:
     image: ghcr.io/jippi/docker-ser2net
     restart: unless-stopped
     network_mode: host
+    volumes:
+      - ./src/ser2net.yaml:/etc/ser2net/ser2net.yaml
     devices:
       - /dev/serial/by-id/usb-0658_0200-if00
