Remove old docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
 ---
 version: "3.4"
 services:
-  ser2net:
+  ser2net2:
     container_name: ser2net
-    image: ghcr.io/theautomation/ser2net:f87b622b338b22ac4e4366eb35d1ecc4b75a8672
+    image: ghcr.io/jippi/docker-ser2net
     restart: unless-stopped
     network_mode: host
+    volumes:
+      - ./src/ser2net.yaml:/etc/ser2net/ser2net.yaml
     devices:
       - /dev/serial/by-id/usb-0658_0200-if00
