--- a/src/ser2net.yaml
+++ b/src/ser2net.yaml
@@ -17,7 +17,7 @@ default:
   value: false
 
 connection: &my-console
-  accepter: telnet(rfc2217),mux,certauth(),ssl,tcp,3001
+  accepter: telnet(rfc2217),tcp,3001
   connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,9600N81,local
   options:
     mdns: false
