--- a/src/ser2net.yaml
+++ b/src/ser2net.yaml
@@ -1,24 +1,9 @@
 %YAML 1.1
 ---
 
-define: &banner Connected to port \N(\d)\r\n
-
-default:
-  name: local
-  value: true
-  class: serialdev
-
-default:
-  name: mdns
-  value: false
-
-default:
-  name: mdns-sysattrs
-  value: false
-
-connection: &my-console
-  accepter: telnet(rfc2217),tcp,3001
-  connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,115200N81,local
-  options:
-    mdns: false
-    banner: *banner
+connection: &my-zwave
+    accepter: tcp,3001
+    enable: on
+    options:
+        kickolduser: true
+    connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,115200N81,nobreak,local
