--- a/src/ser2net.yaml
+++ b/src/ser2net.yaml
@@ -6,4 +6,4 @@ connection: &my-zwave
     enable: on
     options:
         kickolduser: true
-    connector: serialdev,/dev/serial/by-id/usb-0658_0200-if00,115200N81,nobreak,local
+    connector: keepopen(retry-time=2000,discard-badwrites),serialdev,/dev/serial/by-id/usb-0658_0200-if00,115200N81,nobreak,local
