--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,9 @@ version: "3.4"
 services:
   ser2net2:
     container_name: ser2net
-    image: ghcr.io/jippi/docker-ser2net
+    image: ghcr.io/theautomation/ser2net:main
+    pull_policy: always
     restart: unless-stopped
     network_mode: host
-    volumes:
-      - ./src/ser2net.yaml:/etc/ser2net/ser2net.yaml
     devices:
       - /dev/serial/by-id/usb-0658_0200-if00
